Ingress/httpproxy-blue-green.yaml
# httpproxy-name.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: httpproxy-blue-green
  namespace: default
spec:
  virtualhost:
    fqdn: bg.192.168.2.240.xip.io
  routes:
    - services:
      - name: nginx
        port: 80
      - name: httpd
        port: 80
