Ingress/httpproxy-inclusion-test.yaml
# httpproxy-inclusion-test.yaml
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: blog
  namespace: engineering
spec:
  routes:
    - services:
        - name: blog
          port: 80
