Ingress/httpproxy-rate-limiting.yaml
# httpproxy-name.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: httpproxy-rate-limit
  namespace: default
spec:
  virtualhost:
    fqdn: rt.192.168.2.240.xip.io
    rateLimitPolicy:
      local:
        requests: 5
        unit: minute
        burst: 1
  routes:
    - services:
      - name: nginx
        port: 80
      - name: httpd
        port: 80
