Ingress/httpproxy-virtual-host.yaml
# httpproxy-name.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: name-example-nginx-vhost
  namespace: default
spec:
  virtualhost:
    fqdn: nginx.192.168.2.240.xip.io
  routes:
    - services:
      - name: nginx
        port: 80
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: name-example-httpd-vhost
  namespace: default
spec:
  virtualhost:
    fqdn: httpd.192.168.2.240.xip.io
  routes:
    - services:
        - name: httpd
          port: 80
