Ingress/httpproxy-weighted.yaml
# httpproxy-name.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: httpproxy-weighted
  namespace: default
spec:
  virtualhost:
    fqdn: wt.192.168.2.240.xip.io
  routes:
    - services:
      - name: nginx
        port: 80
        weight: 10
      - name: httpd
        port: 80
        weight: 90
