Ingress/simple-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: basic
spec:
  rules:
  - host: 192.168.2.240.xip.io
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
